02.10.2024 HW Update